test/fail_compilation/fail97.d
// 151

import std.stdio;
pragma(lib,"ws2_32.lib")//;
class bla{}
void main(){}
